--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -20,10 +20,10 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="{{ url_for('views.home') }}" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="{{ url_for('views.about') }}" class="nav-link px-2 link-secondary">About</a></li>
         <li><a href="{{ url_for('views.explore') }}" class="nav-link px-2">Explore</a></li>
         {% if current_user.is_authenticated %}
-        <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">Feed</a></li>
+        <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">Home</a></li>
             {% if g.search_form %}
             <form class="navbar-form navbar-left" method="get" action="{{ url_for('views.search') }}">
                 <div class="form-group">
