--- a/website/templates/errors/404.html
+++ b/website/templates/errors/404.html
@@ -5,6 +5,6 @@
 {% block body_content %}
         <div class="container">
         <h1>Page Not Found</h1>
-        <p><a href="{{ url_for('views.home') }}" class="btn btn-primary">Back</a></p>
+        <p><a href="{{ url_for('views.about') }}" class="btn btn-primary">Back</a></p>
         </div>
 {% endblock %}
