--- a/website/templates/errors/500.html
+++ b/website/templates/errors/500.html
@@ -6,6 +6,6 @@
         <div class="container">
         <h1>An unexpected error has occurred</h1>
         <p>Sorry for the inconvenience</p>
-        <p><a href="{{ url_for('views.home') }}" class="btn btn-primary">Back</a></p>
+        <p><a href="{{ url_for('views.about') }}" class="btn btn-primary">Back</a></p>
         </div>
 {% endblock %}
