--- a/website/templates/views/make-post.html
+++ b/website/templates/views/make-post.html
@@ -15,9 +15,7 @@
           {% else: %}
           <h1>New Post</h1>
           {% endif %}
-          <span class="subheading"
-            >You're going to make a great blog post!</span
-          >
+          <span class="subheading">You're going to make a great blog post!</span>
         </div>
       </div>
     </div>
@@ -30,8 +28,8 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         {{ form.hidden_tag() }}
-        {{ ckeditor.load() }} {{ ckeditor.config(name='body') }} {{
-        render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        {{ ckeditor.load() }} {{ ckeditor.config(name='body') }}
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
