--- a/website/templates/views/post.html
+++ b/website/templates/views/post.html
@@ -43,11 +43,10 @@
         <!--Only show Edit Post button if user is logged in -->
         {% if current_user.is_authenticated and post.author_id == current_user.id %}
         <div class="d-flex justify-content-end mb-4">
-          <a
-            class="btn btn-primary float-right"
-            href="{{url_for('views.edit_post', post_id=post.id)}}"
-            >Edit Post</a
-          >
+          <a class="btn btn-primary float-right"
+            href="{{url_for('views.edit_post', post_id=post.id)}}">
+              Edit Post
+          </a>
         </div>
         {% endif %}
         <br>
